# kinnan-research-simulator

./: .gitignore  LICENSE  README.md  hoge.txt  pyproject.toml  requirements.txt
config/: logging.yaml  report.yaml  simulation.yaml
config/cards/: Kinnan.yaml  Roaming_Throne.yaml  ancient_tomb.yaml  arcane_signet.yaml  basalt_monolith.yaml  biomancers_familiar.yaml  birds_of_paradise.yaml  boseiju_who_endures.yaml  botanical_sanctum.yaml  breeding_pool.yaml  city_of_brass.yaml  command_tower.yaml  delighted_halfling.yaml  devoted_druid.yaml  elvish_mystic.yaml  forbidden_orchard.yaml  fyndhorn_elves.yaml  gilded_lotus.yaml  grim_monolith.yaml  island.yaml  llanowar_elves.yaml  mana_confluence.yaml  mana_vault.yaml  nyxbloom_ancient.yaml  otawara_soaring_city.yaml  rejuvenating_springs.yaml  seat_of_the_synod.yaml  snow_covered_island.yaml  sol_ring.yaml  talisman_of_curiosity.yaml  thran_dynamo.yaml  training_grounds.yaml  treasure_vault.yaml  tropical_island.yaml  waterlogged_grove.yaml  yavimaya_coast.yaml
config/combos/: basalt.yaml
config/presets/: goldfish.yaml  shang_chi_comparison.yaml
config/report/: default.yaml
config/simulation/: default.yaml
config/strategies/: aggressive.yaml  balanced.yaml  combo.yaml  shang_chi.yaml
data/cards/: kinnan_cards.json
data/decks/: kinnan.csv
docs/: AI_Design.md  architecture.md
scripts/: build_scryfall_cache.py  run_kinnan_simulation.py
specs/: 00_Project.md  01_GameRules.md  02_CardModel.md  03_KinnanRules.md  04_AI.md  05_Combo.md  06_MonteCarlo.md  12_Statistics.md
tests/: conftest.py
(+307 files in other folders)
